@@ -117,7 +117,7 @@ Send out the checkin event:
 >>> import zeit.cms.checkout.interfaces
 >>> zope.event.notify(
 ...     zeit.cms.checkout.interfaces.BeforeCheckinEvent(
-...         content, zope.security.testing.Principal('hans.wurst')))
+...         content, None, zope.security.testing.Principal('hans.wurst')))
 >>> print lxml.etree.tostring(content.xml, pretty_print=True)
 <content>
   <head>
